# CPSC_4240_Final_Project

./: .gitignore  CMakeLists.txt  Makefile  README.md  requirements.txt
include/: flash_attn.cuh  project_flash_core.cuh  project_flash_splitkv.cuh  utils.cuh
python/: benchmark_official_flash_attn.py  build_report.py  generate_report_data.py  plot_results.py  run_benchmarks.py  setup_official_flash_attn_sources.py
report/: report.tex
src/: ablations.cu  benchmark.cu  flash_attn_v1.cu  flash_attn_v2.cu  flash_attn_v3.cu  naive_attention.cu
